salgu/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: core
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: salgu-api:v3
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 18080
        livenessProbe:
          httpGet:
            path: /status
            port: 18080
          initialDelaySeconds: 60 # 컨테이너 시작 후 몇초 후에 probe를 시작할 것인가
          periodSeconds: 5        # probe 실행 주기
          successThreshold: 1     # 몇개 성공 시 실패 횟수를 초기화할 것인가
          failureThreshold: 1     # 연속으로 몇번 실패 했을때 컨테이너를 재시작할 것인가
          timeoutSeconds: 5       # 응답을 몇초만에 받아야 하는가
