salgu/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: core
  labels:
    app: api

spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - port: 18080
      targetPort: 18080
