salgu/api/api-allow-auth-networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-auth
  namespace: core
  labels:
    app: api
spec:
  podSelector:
    matchLabels:
      app: api
  ingress:
  - ports:
    - port: 18080
    from:
    - podSelector:
        matchLabels:
          app: auth
